Version 1beta1 - released 2012-06-09
cmb	initial release