@@ -146,6 +146,7 @@ but using BBCode in the textarea is still possible.</p>
 <p>Forum_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2012 Christoph M. Becker</p>
+<p>Danish translation &copy; 2012 Jens Maegard</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
