@@ -1,0 +1,65 @@
+<?php
+
+/*
+ * Copyright (c) 2012 Jens Maegaard - JmNet.dk - CMSimple-xh.dk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
+
+$plugin_tx['forum']['format_date']="F j, Y";
+$plugin_tx['forum']['format_time']="H:i:s";
+$plugin_tx['forum']['msg_start_topic']="Start et nyt emne";
+$plugin_tx['forum']['msg_back']="Tilbage til oversigten";
+$plugin_tx['forum']['msg_add_comment']="Tilføj dine kommentar";
+$plugin_tx['forum']['msg_new_topic']="Nyt emne";
+$plugin_tx['forum']['msg_topics']="Emner";
+$plugin_tx['forum']['msg_posted']="by <strong>{user}</strong> den. {date} kl. {time}";
+$plugin_tx['forum']['msg_topic_details']="{comments} (seneste {posted})";
+$plugin_tx['forum']['msg_comments_singular']="%d comment";
+$plugin_tx['forum']['msg_comments_plural_2-4']="%d comments";
+$plugin_tx['forum']['msg_comments_plural_5']="%d comments";
+$plugin_tx['forum']['msg_confirm_delete']="Denne kommentar vil blive slettet!";
+$plugin_tx['forum']['msg_title']="Tittel";
+$plugin_tx['forum']['msg_invalid_name']="Ugyldig forumnavn (Må kun indeholde a-z, 0-9 og - ):";
+$plugin_tx['forum']['msg_powered_by']="Powered by <a href=\"http://3-magi.net/?CMSimple_XH/Forum_XH\">Forum_XH</a>";
+$plugin_tx['forum']['lbl_comment_missing']="Skriv dine kommentar";
+$plugin_tx['forum']['lbl_submit']="Send";
+$plugin_tx['forum']['lbl_delete']="Slet kommentar";
+$plugin_tx['forum']['lbl_bold']="Fed";
+$plugin_tx['forum']['lbl_italic']="Kursiv";
+$plugin_tx['forum']['lbl_underline']="Understreget";
+$plugin_tx['forum']['lbl_emoticon']="Humørikon";
+$plugin_tx['forum']['lbl_smile']="Smil";
+$plugin_tx['forum']['lbl_wink']="Vink";
+$plugin_tx['forum']['lbl_happy']="Glad";
+$plugin_tx['forum']['lbl_grin']="Griner";
+$plugin_tx['forum']['lbl_tongue']="Tunge";
+$plugin_tx['forum']['lbl_surprised']="Overrasket";
+$plugin_tx['forum']['lbl_unhappy']="Ked af det";
+$plugin_tx['forum']['lbl_picture']="Billede";
+$plugin_tx['forum']['lbl_link']="Link";
+$plugin_tx['forum']['lbl_size']="size";
+$plugin_tx['forum']['lbl_big']="Stor";
+$plugin_tx['forum']['lbl_normal']="Normal";
+$plugin_tx['forum']['lbl_small']="Lille";
+$plugin_tx['forum']['lbl_bulleted_list']="Bulleted List";
+$plugin_tx['forum']['lbl_numeric_list']="Numeric List";
+$plugin_tx['forum']['lbl_list_item']="List Item";
+$plugin_tx['forum']['lbl_quotes']="Quotes";
+$plugin_tx['forum']['lbl_code']="Kode";
+$plugin_tx['forum']['lbl_clean']="Ryd";
+$plugin_tx['forum']['lbl_preview']="Vis";
+$plugin_tx['forum']['lbl_link_text']="Tekst til link her...";
+$plugin_tx['forum']['syscheck_title']="System check";
+$plugin_tx['forum']['syscheck_phpversion']="PHP version &ge; %s";
+$plugin_tx['forum']['syscheck_extension']="Extension '%s' loaded";
+$plugin_tx['forum']['syscheck_encoding']="Encoding 'UTF-8' configured";
+$plugin_tx['forum']['syscheck_magic_quotes']="Magic quotes runtime off";
+$plugin_tx['forum']['syscheck_jquery']="<a href=\"http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple\">jQuery4CMSimple plugin</a> installed";
+$plugin_tx['forum']['syscheck_writable']="Folder '%s' writable";
+$plugin_tx['forum']['cf_folder_data']="Path to a folder relative to the CMSimple root directory, where to store the plugin's data. E.g. \"userfiles/forum/\". Leave empty to store in the plugin's data/ folder.";
+$plugin_tx['forum']['cf_format_date']="For possible formatting options see http://php.net/manual/en/function.date.php.";
+$plugin_tx['forum']['cf_format_time']="For possible formatting options see http://php.net/manual/en/function.date.php.";
+
+?>
